# benchmark_local

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  run-benchmark-auto.ps1  setup.ps1
readme/: prompts.example.json
scripts/: benchmark_models.py  benchmark_scorer.py  prompts.json  run-server.ps1
