[project]
name = "benchmark_local"
version = "1.0.0"
description = "Benchmarks de modelos locais GGUF em um painel unificado e autossuficiente"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
